# spanish-language-tutor

./: .env.template  .envrc  .lintstagedrc.js  .tool-versions  README.md  justfile  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json
.husky/: pre-commit
language_tutor/: agent.py  constants.py  transcription.py  web_search.py
language_tutor/topics/: __init__.py  constants.py  random_topic.py
scripts/environment/: asdf-install.sh
tests/: test_web_search.py
